--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,7 @@
 
 .uno{
     background-color: rgb(26, 26, 26);
-    /* position: fixed;
-    z-index: 1; */
+    position: fixed;
 }
 
 .due{
@@ -46,7 +45,7 @@
 }
 
 .footer{
-    /* position: fixed; */
+    position: fixed;
     min-height: 15vh;
     padding: 10px;
     background-color: rgb(37, 37, 37);
