--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,14 @@
     box-sizing: border-box;
 }
 
+body{
+    height: 100vh;
+}
+
+main{
+    height: calc(100vh - 100px);
+}
+
 .container{
     color: white;
 }
@@ -50,6 +58,7 @@
 }
 
 .footer{
+    height: 100px;
     min-height: 15vh;
     background-color: rgb(37, 37, 37);
 }
