--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,11 @@ main{
     flex-wrap: wrap;
 }
 
+.logo{
+    width: 160px;
+    padding-top: 5px;
+}
+
 .line{
     min-height: 10vh;
     padding: 10px;
@@ -41,6 +46,18 @@ main{
 .due{
     background-color: rgb(14, 14, 49);
     height: 100%;
+    text-align: center;
+}
+
+button{
+    color: lightgray;
+    background-color: rgb(14, 14, 49);
+    border: 0;
+    padding-left: 20px;
+}
+
+.Recenti{
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .col-xs-2 {
