--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body{
 }
 
 main{
-    max-height: 75vh;
+    max-height: 77vh;
 }
 
 .container{
@@ -24,6 +24,32 @@ main{
 .logo{
     width: 160px;
     padding-top: 5px;
+    vertical-align: middle;
+}
+
+.effettua{
+    line-height: 50px;
+    vertical-align: middle;
+    float: right;
+}
+
+.upgrade{
+    border: 1px solid lightgray;
+    background-color: rgb(14, 14, 14);
+    color: white;
+    text-align: center;
+    margin-right: 30px;
+    border-radius: 25px;
+    padding: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.upgrade:hover{
+    background-color: rgb(218, 218, 218);
+    color: rgb(75, 75, 75);
+    border-color: rgb(218, 218, 218);
+    transition: 0.3s;
 }
 
 .line{
@@ -33,7 +59,7 @@ main{
 }
 
 .box{
-    height: 75vh;
+    height: 77vh;
     padding: 10px;
 }
 
@@ -50,14 +76,20 @@ main{
     overflow-y: auto;
 }
 
-button{
+.navigazione:hover{
+    border-bottom: 2px solid lime;
+}
+
+.navigazione{
     color: lightgray;
     background-color: rgb(14, 14, 49);
     border: 0;
-    padding-left: 20px;
+    margin-left: 20px;
+    padding-left: 2px;
+    padding-right: 2px;
 }
 
-.Recenti{
+.Sezione{
     padding-top: 30px;
     padding-left: 20px;
     text-align: left;
@@ -73,9 +105,33 @@ button{
     width: 100%;
 }
 
+img:hover{
+
+}
+
+.suggerimenti{
+    padding-bottom: 100px;
+    font-size: 14px;
+    line-height: 40px;
+    color: gray;
+}
+
 .col-xs-1 {
     flex-basis: calc((100% / 6) * 1);
     max-width: calc((100% / 6) * 1);
+    margin-top: 20px;
+}
+
+.brani{
+    padding-top: 15px;
+    font-weight: 800;
+    text-align: center;
+}
+
+.autori{
+    padding-top: 10px;
+    text-align: center;
+    color: rgb(149, 149, 149);
 }
 
 .col-xs-2 {
@@ -86,7 +142,7 @@ button{
 .col-xs-10 {
     flex-basis: calc((100% / 12) * 10);
     max-width: calc((100% / 12) * 10);
-    max-height: 75vh;
+    max-height: 77vh;
 }
 
 .col-xs-12 {
@@ -96,6 +152,17 @@ button{
 }
 
 .footer{
-    min-height: 15vh;
+    min-height: 13vh;
     background-color: rgb(37, 37, 37);
+}
+
+.line-d{
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+
+.listening{
+    width: 60px;
+    margin: 17px;
 }
