--- a/css/style.css
+++ b/css/style.css
@@ -239,20 +239,70 @@ main{
     padding-left: 10px;
 }
 
+.centro{
+    width: 50%;
+}
+
 .riproduzione{
+    text-align: center;
     padding-top: 10px;
-    font-size: 35px;
     color: white;
+    display: flex;
+    justify-content: center;
+}
+
+.fa-random{
+    padding-top: 8px;
+    font-size: 25px;
+}
+
+.fa-step-backward{
+    padding-top: 8px;
+    padding-left: 40px;
+    font-size: 25px;
+}
+
+.play{
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: 40px;
+}
+
+.fa-step-forward{
+    padding-top: 8px;
+    padding-right: 40px;
+    font-size: 25px;
+}
+
+.fa-redo-alt{
+    padding-top: 8px;
+    font-size: 25px;
+}
+
+.timeline{
+    margin-top: 20px;
     display: flex;
     justify-content: space-between;
 }
 
-.fa-step-backward{
-    padding: 5px 25px;
-    font-size: 25px;
+.durata{
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 
-.fa-step-forward{
-    padding: 5px 25px;
-    font-size: 25px;
+.barra{
+    height: 8px;
+    width: 650px;
+    background-color:gray;
+    display: flex;
+    margin: 5px 10px;
+    border-radius: 20px;
+}
+
+.past{
+    flex-basis: calc((100% / 5) * 1);
+    max-width: calc((100% / 5) * 1);
+    background-color: white;
+    border-radius: 20px;
 }
